syntax = "proto3";

package pb;

option go_package = "github.com/frhnfrnk/simple-blog-platform/post-service/pb;pb";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
  rpc GetAllPosts(GetAllPostsRequest) returns (GetAllPostsResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  int32 author_id = 4;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  int32 author_id = 3;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message GetAllPostsRequest {}

message GetAllPostsResponse {
  repeated Post posts = 1;
}

message UpdatePostRequest {
  string id = 1;
  string title = 2;
  string content = 3;
  int32 author_id = 4;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string id = 1;
}

message DeletePostResponse {
  string message = 1;
}
